# face

./: .env  .gitignore  Dockerfile  docker-compose.yml  execute.sh  pyproject.toml  run_migration.sh
app/: main.py  pyproject.toml
app/migrations/: env.py
app/migrations/versions/: 4212436d2fca_add_camera.py  ab00dadcafca_inital_migration.py  d265f486e701_fix.py
app/models/: __init__.py  admin.py  view.py
app/models/camera/: model.py  view.py
app/models/user/: model.py  view.py
app/models/user_log/: model.py  view.py
app/models/user_logs/: model.py  view.py
app/modules/: router.py
app/modules/user_logs/: repository.py  router.py  schemas.py
config/: .env  config.py  db_helper.py  logging.py  schemas.py
script/: connect.py  main.py  pyproject.toml  save_user_log.py
